// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RadioField> tests <RadioField> - RadioInput rendering - disabled 1`] = `
"<FormGroup
      fieldId={'id'}
      label={'Role'}
      isRequired={true}
    >
      <div><Radio
      key={'Developer'}
      id={'id-Developer'}
      name={'role'}
      isChecked={'Developer' === role}
      isDisabled={true}
      label={'Developer'}
      aria-label={'role'}
      onChange={() => set__role('Developer')}
    />
<Radio
      key={'HR'}
      id={'id-HR'}
      name={'role'}
      isChecked={'HR' === role}
      isDisabled={true}
      label={'HR'}
      aria-label={'role'}
      onChange={() => set__role('HR')}
    />
<Radio
      key={'UX'}
      id={'id-UX'}
      name={'role'}
      isChecked={'UX' === role}
      isDisabled={true}
      label={'UX'}
      aria-label={'role'}
      onChange={() => set__role('UX')}
    /></div>
    </FormGroup>"
`;

exports[`<RadioField> tests <RadioField> - rendering 1`] = `
"<FormGroup
      fieldId={'id'}
      label={'Role'}
      isRequired={true}
    >
      <div><Radio
      key={'Developer'}
      id={'id-Developer'}
      name={'role'}
      isChecked={'Developer' === role}
      isDisabled={false}
      label={'Developer'}
      aria-label={'role'}
      onChange={() => set__role('Developer')}
    />
<Radio
      key={'HR'}
      id={'id-HR'}
      name={'role'}
      isChecked={'HR' === role}
      isDisabled={false}
      label={'HR'}
      aria-label={'role'}
      onChange={() => set__role('HR')}
    />
<Radio
      key={'UX'}
      id={'id-UX'}
      name={'role'}
      isChecked={'UX' === role}
      isDisabled={false}
      label={'UX'}
      aria-label={'role'}
      onChange={() => set__role('UX')}
    /></div>
    </FormGroup>"
`;
